<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    android:background="#A3D8FF"
    tools:context=".ui.LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        android:background="@drawable/custom_edittext"
        android:backgroundTint="#8eb7b5">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:background="#8eb7b5"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:id="@+id/loginText"
                android:textSize="40sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/etUsernameLogin"
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/username"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="20dp"
                android:padding="10dp"
                android:layout_marginBottom="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etPasswordLogin"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="5"
                    android:background="@drawable/custom_edittext"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="20dp"
                    android:padding="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="15dp"/>

                <ToggleButton
                    android:id="@+id/toggleButtonShowPassword"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:textOff="@string/show"
                    android:textOn="@string/hide"
                    android:layout_gravity="end"
                    android:background="@drawable/custom_edittext"
                    android:layout_marginBottom="15dp"/>

            </LinearLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:backgroundTint="#4D869C"
                android:layout_marginBottom="15dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tvCreateAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="italic"
                android:textColor="#074173"
                android:text="@string/create_new_account"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>