<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    android:background="#A3D8FF"
    tools:context=".ui.RegisterActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        android:background="@drawable/custom_edittext"
        android:backgroundTint="#8eb7b5">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:background="#8eb7b5"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:id="@+id/registerText"
                android:textSize="40sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/etUsernameRegister"
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/username"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="20dp"
                android:padding="10dp"
                android:layout_marginBottom="15dp"/>

            <EditText
                android:id="@+id/etNameRegister"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/name"
                android:drawableStart="@drawable/ic_baseline_account_box_24"
                android:drawablePadding="20dp"
                android:padding="10dp"
                android:layout_marginBottom="15dp"/>

            <EditText
                android:id="@+id/etPasswordRegister"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/password"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="20dp"
                android:padding="10dp"
                android:layout_marginBottom="15dp"/>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:layout_marginBottom="15dp"
                android:backgroundTint="#4D869C"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tvAlreadyHaveAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="italic"
                android:text="@string/already_have_account_login_here"
                android:textColor="#074173"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>